--- a/.config/forge/stylesheet/forge/stylesheet.css
+++ b/.config/forge/stylesheet/forge/stylesheet.css
@@ -29,15 +29,15 @@
 }
 
 .window-tiled-border {
-  border-width: 2px;
-  border-color: rgb(236,94,94);
+  border-width: 1px;
+  border-color: rgb(255,255,255);
   border-style: solid;
   border-radius: 14px;
 }
 
 .window-split-border {
-  border-width: 3px;
-  border-color: rgb(154,153,150);
+  border-width: 1px;
+  border-color: rgba(191,64,64,0);
   border-style: solid;
   border-radius: 14px;
 }
@@ -56,14 +56,14 @@
 
 .window-stacked-border {
   border-width: 1px;
-  border-color: rgb(154,153,150);
+  border-color: rgba(191,64,64,0);
   border-style: solid;
   border-radius: 14px;
 }
 
 .window-tabbed-border {
-  border-width: 1px;
-  border-color: rgb(255,255,255);
+  border-width: 3px;
+  border-color: rgba(191,64,64,0);
   border-style: solid;
   border-radius: 14px;
 }
@@ -73,59 +73,54 @@
 }
 
 .window-tabbed-tab {
+  background-color: rgba(54, 47, 45, 1);
+  border-color: rgba(191,64,64,0.6);
+  border-width: 1px;
+  border-radius: 8px;
   color: white;
-  margin: 3px;
-  background: transparent;
-  border-radius: 5px;
-  font-weight: 500;
-  border: 1px dashed rgba(255,255,255,0.075);
-}
-
-.window-tabbed-tab:first-child {
-  margin-left: 0 !important;
-}
-
-.window-tabbed-tab:last-child {
-  margin-right: 0 !important;
+  margin: 1px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
 }
 
 .window-tabbed-tab-active {
-  border: 1px dashed rgba(255,255,255,0.250);
+  background-color: rgba(191,64,64,0);
+  color: black;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
 }
 
 .window-tabbed-tab-close {
   padding: 3px;
-  margin: 2px;
+  margin: 4px;
   border-radius: 16px;
   width: 16px;
-  background-color: transparent;
+  background-color: #e06666;
 }
 
 .window-tabbed-tab-icon {
-  margin: 7px;
+  margin: 3px;
 }
 
 .window-floated-border {
   border-width: 1px;
-  border-color: rgb(154,153,150);
+  border-color: rgba(191,64,64,0);
   border-style: solid;
   border-radius: 14px;
 }
 
 .window-tilepreview-tiled {
   border-width: 1px;
-  border-color: rgba(236,94,94,0.3);
+  border-color: rgba(255,255,255,0.3);
   border-style: solid;
   border-radius: 14px;
-  background-color: rgba(236,94,94,0.2);
+  background-color: rgba(255,255,255,0.2);
 }
 
 .window-tilepreview-stacked {
   border-width: 1px;
-  border-color: rgba(154,153,150,0.3);
+  border-color: rgba(191,64,64,0.3);
   border-style: solid;
   border-radius: 14px;
-  background-color: rgba(154,153,150,0.2);
+  background-color: rgba(191,64,64,0.2);
 }
 
 .window-tilepreview-swap {
@@ -138,8 +133,8 @@
 
 .window-tilepreview-tabbed {
   border-width: 1px;
-  border-color: rgba(255,255,255,0.3);
+  border-color: rgba(191,64,64,0.3);
   border-style: solid;
   border-radius: 14px;
-  background-color: rgba(255,255,255,0.2);
+  background-color: rgba(191,64,64,0.2);
 }
