--- a/.config/forge/stylesheet/forge/stylesheet.css
+++ b/.config/forge/stylesheet/forge/stylesheet.css
@@ -29,15 +29,15 @@
 }
 
 .window-tiled-border {
-  border-width: 1px;
-  border-color: rgb(255,255,255);
+  border-width: 2px;
+  border-color: rgba(236, 94, 94, 1);
   border-style: solid;
   border-radius: 14px;
 }
 
 .window-split-border {
-  border-width: 1px;
-  border-color: rgba(191,64,64,0);
+  border-width: 2px;
+  border-color: rgba(255, 246, 108, 1);
   border-style: solid;
   border-radius: 14px;
 }
@@ -55,15 +55,15 @@
 }
 
 .window-stacked-border {
-  border-width: 1px;
-  border-color: rgba(191,64,64,0);
+  border-width: 2px;
+  border-color: rgba(247, 162, 43, 1);
   border-style: solid;
   border-radius: 14px;
 }
 
 .window-tabbed-border {
-  border-width: 3px;
-  border-color: rgba(191,64,64,0);
+  border-width: 2px;
+  border-color: rgba(17, 199, 224, 1);
   border-style: solid;
   border-radius: 14px;
 }
@@ -74,7 +74,7 @@
 
 .window-tabbed-tab {
   background-color: rgba(54, 47, 45, 1);
-  border-color: rgba(191,64,64,0.6);
+  border-color: rgba(17, 199, 224, 0.6);
   border-width: 1px;
   border-radius: 8px;
   color: white;
@@ -83,7 +83,7 @@
 }
 
 .window-tabbed-tab-active {
-  background-color: rgba(191,64,64,0);
+  background-color: rgba(17, 199, 224, 1);
   color: black;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
 }
@@ -101,26 +101,26 @@
 }
 
 .window-floated-border {
-  border-width: 1px;
-  border-color: rgba(191,64,64,0);
+  border-width: 2px;
+  border-color: rgba(180, 167, 214, 1);
   border-style: solid;
   border-radius: 14px;
 }
 
 .window-tilepreview-tiled {
   border-width: 1px;
-  border-color: rgba(255,255,255,0.3);
+  border-color: rgba(236, 94, 94, 0.4);
   border-style: solid;
   border-radius: 14px;
-  background-color: rgba(255,255,255,0.2);
+  background-color: rgba(236, 94, 94, 0.3);
 }
 
 .window-tilepreview-stacked {
   border-width: 1px;
-  border-color: rgba(191,64,64,0.3);
+  border-color: rgba(247, 162, 43, 0.4);
   border-style: solid;
   border-radius: 14px;
-  background-color: rgba(191,64,64,0.2);
+  background-color: rgba(247, 162, 43, 0.3);
 }
 
 .window-tilepreview-swap {
@@ -133,8 +133,8 @@
 
 .window-tilepreview-tabbed {
   border-width: 1px;
-  border-color: rgba(191,64,64,0.3);
+  border-color: rgba(18, 199, 224, 0.4);
   border-style: solid;
   border-radius: 14px;
-  background-color: rgba(191,64,64,0.2);
+  background-color: rgba(17, 199, 224, 0.3);
 }
